fusiondigital/src/components/Navbar/Navbar.scss
@use '../../styles/variables' as v;

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  font-size: 1.2em;
  height: 52px;
  width: 100%;
  position: fixed;
  top: 3.3em;
  right: 0;
  z-index: 50;
  font-family: v.$headings-font, sans-serif;

  .menu {
    text-decoration: none;
    padding: 0.5em;
    color: v.$white;
    position: relative;
    transition: color 0.3s ease;

    &--active{ 
      color: v.$bright-blue;
      font-size: larger;
      text-transform: capitalize;
    }
    &:hover {
      color: v.$bright-blue;
    }
   
    /* Line under menu items */
    &::after {
      content: '';
      position: absolute;
      left: 0;
      bottom: -3px;
      width: 0; 
      height: 2px;
      background-color: v.$bright-blue;
      transition: width 0.5s ease;
      transform-origin: bottom center; 
    }

    &:hover::after {
      width: 100%;
    }
  }
  
  @media (max-width: 768px) {
    display: block;
    width: 0.5px;
    height: fit-content;
    a {
      color: v.$silver; 
      display: block;
      margin: 0;
      padding: 0.5em;
    }
  }
}

.show-menu {
  padding: 0.5em;
  text-align: right;
  width: fit-content;
  font-size: 1.2em;
  
}

.hamburger {
  display: none;
  z-index: 4;
  width: 80px;
  height: 80px;
  position: fixed;
  top: 28px;
  right: 13px;
  .burger-icon.close {
    width: 40px;
    height: 40px;
    margin-left: 45px;
  }
  .close {
    content: url('/src/assets/icons/close.png');
  }
  .open {
    content: url('/src/assets/icons/burger-icon.png');
  }
  @media (max-width: 768px) {
    display: flex;
  }
}

.dropdown {
  position: relative;

  .menu {
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
  }

  .arrow {
    margin-left: 1em;
    transform: rotate(90deg);
    opacity: 0;
    transition: opacity 0.3s ease;
  }

  &:hover .arrow,
  &.show-dropdown .arrow { 
    opacity: 1;
  }

  .dropdown-tab {
    position: absolute;
    display: flex;
    flex-direction: column;
    width: 10em;
    z-index: 100;
    display: none;
  }

  &:hover .dropdown-tab {
    display: flex; 
  }
}

  @media (max-width: 768px) {
    .dropdown .dropdown-tab {
      display: none !important;
    }

    .dropdown .arrow {
      display: none;
    }
  }

